[gd_scene load_steps=4 format=3 uid="uid://oynayhy2qfbs"]

[ext_resource type="Script" path="res://scripts/portal.gd" id="1_83rot"]
[ext_resource type="Texture2D" uid="uid://bdh4a8y0pn7v4" path="res://art/sprout lands basic/Objects/Free_Chicken_House.png" id="2_ncsqg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kf8yy"]
radius = 30.0

[node name="Portal" type="Area2D"]
z_index = -3
script = ExtResource("1_83rot")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ncsqg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kf8yy")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
